# hve-core

./: .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  SUPPORT.md  package-lock.json  package.json
.cspell/: azure-services.txt  general-technical.txt
.devcontainer/: README.md
.github/: CUSTOM-AGENTS.md  PULL_REQUEST_TEMPLATE.md
.github/instructions/: README.md
.github/plugin/: marketplace.json
.github/prompts/: README.md
.github/skills/jira/jira/: SKILL.md  pyproject.toml
.github/skills/jira/jira/scripts/: jira.py
.github/skills/jira/jira/tests/: conftest.py  test_constants.py  test_jira_commands.py  test_jira_helpers.py  test_jira_main.py  test_jira_transport.py
.github/workflows/: README.md  dependency-review.yml  release-prerelease.yml  release-stable.yml  scorecard.yml
collections/: design-thinking.collection.md  design-thinking.collection.yml  gitlab.collection.md  gitlab.collection.yml  hve-core-all.collection.md  hve-core-all.collection.yml  jira.collection.md  jira.collection.yml  security.collection.md  security.collection.yml
docs/: README.md
docs/agents/: README.md
docs/architecture/: ai-artifacts.md  workflows.md
docs/contributing/: ROADMAP.md  ai-artifacts-common.md  branch-protection.md  custom-agents.md  instructions.md  prompts.md  skills.md
docs/customization/: README.md  collections.md  forking.md  skills.md  team-adoption.md
docs/design-thinking/: README.md  dt-coach.md  dt-learning-tutor.md  tutorial-handoff-to-rpi.md  (+1 more)
extension/: PACKAGING.md
scripts/: README.md
(+100 files in other folders)
